[gd_scene load_steps=12 format=3 uid="uid://bqw1d0ypu55wd"]

[ext_resource type="Script" path="res://Scripts/Player/Player.gd" id="1_pg7rg"]
[ext_resource type="Texture2D" uid="uid://1q30sdxpwnpa" path="res://Assets/TestAssets/testGreen.png" id="2_64v6x"]
[ext_resource type="Script" path="res://Scripts/Player/StateMachine.gd" id="3_g0fu3"]
[ext_resource type="Script" path="res://Scripts/Player/States/PlayerMove.gd" id="4_ye8pn"]
[ext_resource type="Script" path="res://Scripts/Player/States/PlayerIdle.gd" id="5_wl27p"]
[ext_resource type="Script" path="res://Scripts/Player/States/PlayerJump.gd" id="6_ekv1u"]
[ext_resource type="Script" path="res://Scripts/Player/States/PlayerFall.gd" id="7_drhye"]
[ext_resource type="Script" path="res://Scripts/Player/States/PlayerCrouch.gd" id="8_1mgkd"]
[ext_resource type="Script" path="res://Scripts/Player/States/PlayerBlock.gd" id="9_mxgn1"]
[ext_resource type="Script" path="res://Scripts/Player/States/PlayerRecovery.gd" id="10_jjiqc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4100t"]

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_pg7rg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4100t")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4.76837e-07, 2.38419e-07)
scale = Vector2(0.625, 0.625)
texture = ExtResource("2_64v6x")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("3_g0fu3")
initialState = NodePath("PlayerFall")

[node name="PlayerMove" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("4_ye8pn")
player = NodePath("../..")

[node name="PlayerIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_wl27p")
player = NodePath("../..")

[node name="PlayerJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_ekv1u")
player = NodePath("../..")

[node name="PlayerFall" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("7_drhye")
player = NodePath("../..")

[node name="PlayerCrouch" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("8_1mgkd")
player = NodePath("../..")

[node name="PlayerBlock" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("9_mxgn1")
player = NodePath("../..")

[node name="PlayerRecovery" type="Node" parent="StateMachine"]
script = ExtResource("10_jjiqc")

[node name="InputTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="InputTimer" to="." method="_on_input_timer_timeout"]
